# pynotebook

./: README.md  pyproject.toml  runtests.py  setup.py
pnb/: pyproject.toml  setup.py
pnb/pnb/: __init__.py  __main__.py
pynotebook/: cerealizerformat.py  graphics.py  jsonformat.py  nbstream.py  nbtexels.py  nbview.py  pyclient.py  textformat.py  wxgraphics.py  xmlformat.py
pynotebook/textmodel/: properties.py  texeltree.py  textmodel.py
pynotebook/wxtextview/: boxes.py  linewrap.py  markbuffer.py  rect.py  simplelayout.py  testdevice.py  testing.py  textview.py  wxdevice.py  wxtextview.py
